# collaborative-research-watch

./: .gitignore  AGENTS.md  BACKLOG.md  MERGE_CONFLICT_LEDGER.md  PATH_1_LEDGER.md  PATH_2_BUILD_ORDER.md  PATH_2_DESIGN.md  PATH_2_LEDGER.md  PRD.md  README.md  WORKSPACE_SCHEMA.md  pyrightconfig.json
.agents/skills/alignment-grill/: SKILL.md
.agents/skills/research-watch-tests/: SKILL.md
.agents/skills/research-watch-tests/agents/: openai.yaml
backend/: pyproject.toml
backend/scripts/: smoke_pdf_extract.py
backend/src/research_watch/: __init__.py  ai_generation.py  ai_input.py  ai_store.py  api.py  csv_store.py  extractors.py  fake_ai.py  logging_config.py  markdown_store.py  models.py  sync.py  workspace.py
backend/tests/: test_ai_generation.py  test_ai_input.py  test_api.py  test_extractors.py  test_repository.py
frontend/: bun.lockb  index.html  package.json
frontend/src/: main.tsx  styles.css
