[project]
name = "collaborative-research-watch-backend"
version = "0.1.0"
description = "Filesystem-first shared research collaboration MVP backend."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=2.43.0",
  "pydantic>=2.8.0",
  "python-docx>=1.2.0",
  "pypdf>=6.13.3",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
